--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./focus on today.css"> 
-    <link rel="icon" href="./project assets/Sun.png">
+    <link rel="icon" href="./Sun.png">
    <script src="./focus on toaday.js" defer></script>
 </head>
 <body>
    <h1>Focus On <span class="title">Today</span></h1> 
    <main>
    <div class="container">
-    <h2>Today<span><img src="./project assets/Sun.png" class="sun"></span></h2>
+    <h2>Today<span><img src="./Sun.png" class="sun"></span></h2>
       <p class="tagline">Raise the bar by completing your goals</p>
    <div class="progress-bar">
    <div class="progressValue"><span>2/3 Completed</span></div>
    <p class="red-line">Please set all the 3 goals!</p></div>
    <div class="goal-container ">
       <div class="checkbox">
-         <img src="./project assets/check-icon.svg" alt="check-icon"> 
+         <img src="./check-icon.svg" alt="check-icon"> 
       </div>
       <input type="text" placeholder="add a new goal.." class="input-field" id="first">
    </div>
    <div class="goal-container">
       <div class="checkbox ">
-         <img src="./project assets/check-icon.svg" alt="check-icon"> 
+         <img src="./check-icon.svg" alt="check-icon"> 
       </div>
       <input type="text" placeholder="add a new goal.." class="input-field" id="second">
    </div>
    <div class="goal-container">
       <div class="checkbox">
-         <img src="./project assets/check-icon.svg" alt="check-icon"> 
+         <img src="./check-icon.svg" alt="check-icon"> 
       </div>
       <input type="text" placeholder="add a new goal.." class="input-field" id="third">
    </div>
